<resources>
    <string name="app_name">Photo Prints</string>
    <string name="txtTitle">Phone Photo Prints</string>
    <string name="hint">Number of Prints</string>
    <string name="rad4x6">4 x 6 (19 cents)</string>
    <string name="rad5x7">5 x 7 (49 cents)</string>
    <string name="rad8x10">8 x 10 (79 cents)</string>
    <string name="btnOrder">ORDER PRINTS</string>
    <string name="result"></string>
</resources>
